# The-simulation-of-Licycle

./: CMakeLists.txt  README.md  main.cpp  nlctest.cpp  pos_control.cpp  qptest.cpp
include/: bicycle_controller.h  control.h  gait_generator.h  leg_controller.h  main.h  model.h  opmath.h  stance_leg_controller (复件).h  stance_leg_controller.h  swing_leg_controller.h
rsc/Smart Bikeurdf/urdf/: Smart Bikeurdf.urdf  unmanned_bicycle.urdf
rsc/licycle_urdf/urdf/: licycle.csv  licycle.urdf
rsc/licycle_urdfnew/: CMakeLists.txt  package.xml
rsc/licycle_urdfnew/launch/: display.launch
rsc/licycle_urdfnew/meshes/: back_tire_Link.STL  front_tire_Link.STL  left_hip_Link.STL  left_thigh_Link.STL  right_hip_Link.STL  right_shank_Link.STL  right_thigh_Link.STL  steer_Link.STL
rsc/licycle_urdfnew/urdf/: licycle_urdf.urdf
rsc/loadrobot/meshes/: front_tire_Link.STL  left_hip_Link.STL  left_shank_Link.STL  left_thigh_Link.STL
src/: afile.txt  afile06.txt  afile060.txt  afile065.txt  afile07.txt  bfile.txt  bfile1.txt  bfile10.txt  bfile9.txt  bfilet.txt  bicycle_controller.cpp  control.cpp  door.txt  gait_generator.cpp  leg_controller.cpp  model.cpp  opmath.cpp  rugged_terrain.txt  stance_leg_controller (复件).cpp  stance_leg_controller.cpp  swing_leg_controller.cpp
src/317/: afile.txt  afile1.txt
